Fixed white space between navbar and carousel on res 979 and below Added some contents Completed responsive web design on main frontend

--- a/frontend/www/css/styles.css
+++ b/frontend/www/css/styles.css
@@ -17,8 +17,6 @@
       color: #5a5a5a;
     }
 
-
-
     /* CUSTOMIZE THE NAVBAR
     -------------------------------------------------- */
 
@@ -112,6 +110,14 @@
         width: auto;
         height: 500px;
       }
+      
+      #page-wrapper {
+        margin-top: -20px;
+      }
+      .carousel-caption {
+        margin-top: 120px;
+      }
+     
     }
 
 
@@ -133,7 +139,7 @@
       .carousel-caption {
         width: 65%;
         padding: 0 70px;
-        margin-top: 100px;
+        margin-top: 50px;
       }
       .carousel-caption h1 {
         font-size: 30px;
